--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Here are some ideas to get you started:
 <head>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="markdown-body">
   <h2>Hey 👋, I'm <a href="https://alejosilvalau.netlify.app">Alejo</a></h2>
   
   <p>
